--- a/src/layouts/general/layout.module.css
+++ b/src/layouts/general/layout.module.css
@@ -187,7 +187,7 @@
 
 .nav__background__active {
   position: absolute;
-  z-index: 50;
+  z-index: 0;
   left: -4px;
 }
 
@@ -200,7 +200,7 @@
   transition: all 300ms cubic-bezier(0.925, 0.045, 0.785, 0.925);
   transition-timing-function: cubic-bezier(0.925, 0.045, 0.785, 0.925);
   max-width: none;
-  z-index: 100;
+  z-index: 0;
 }
 
 .nav__inner {
